@@ -22,7 +22,8 @@ import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNull;
-import static org.mockito.Matchers.any;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.nullable;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -62,14 +63,14 @@ public class RecurringAppointmentMapperTest {
                 .withEndDateTime(DateUtils.addDays(new Date(), 2))
                 .build();
         when(appointmentMapper.constructResponse(any(Appointment.class))).thenReturn(new AppointmentDefaultResponse());
-        when(recurringPatternMapper.mapToResponse(any(AppointmentRecurringPattern.class))).thenReturn(recurringPattern);
+        when(recurringPatternMapper.mapToResponse(nullable(AppointmentRecurringPattern.class))).thenReturn(recurringPattern);
 
         List<RecurringAppointmentDefaultResponse> recurringAppointmentDefaultResponses =
                 recurringAppointmentMapper.constructResponse(Arrays.asList(appointmentOne, appointmentTwo, appointmentThree));
 
-        assertEquals(new Integer(3), recurringAppointmentDefaultResponses.get(0).getRecurringPattern().getFrequency());
-        assertEquals(new Integer(3), recurringAppointmentDefaultResponses.get(1).getRecurringPattern().getFrequency());
-        assertEquals(new Integer(3), recurringAppointmentDefaultResponses.get(2).getRecurringPattern().getFrequency());
+        assertEquals(Integer.valueOf(3), recurringAppointmentDefaultResponses.get(0).getRecurringPattern().getFrequency());
+        assertEquals(Integer.valueOf(3), recurringAppointmentDefaultResponses.get(1).getRecurringPattern().getFrequency());
+        assertEquals(Integer.valueOf(3), recurringAppointmentDefaultResponses.get(2).getRecurringPattern().getFrequency());
         assertNull(recurringAppointmentDefaultResponses.get(0).getRecurringPattern().getEndDate());
         assertNull(recurringAppointmentDefaultResponses.get(1).getRecurringPattern().getEndDate());
         assertNull(recurringAppointmentDefaultResponses.get(2).getRecurringPattern().getEndDate());
@@ -103,7 +104,7 @@ public class RecurringAppointmentMapperTest {
                 .withEndDateTime(new SimpleDateFormat("dd/MM/yyyy").parse("18/06/2019"))
                 .build();
         when(appointmentMapper.constructResponse(any(Appointment.class))).thenReturn(new AppointmentDefaultResponse());
-        when(recurringPatternMapper.mapToResponse(any(AppointmentRecurringPattern.class))).thenReturn(recurringPattern);
+        when(recurringPatternMapper.mapToResponse(nullable(AppointmentRecurringPattern.class))).thenReturn(recurringPattern);
 
         List<RecurringAppointmentDefaultResponse> recurringAppointmentDefaultResponses =
                 recurringAppointmentMapper.constructResponse(Arrays.asList(appointmentOne, appointmentTwo));
@@ -136,18 +137,18 @@ public class RecurringAppointmentMapperTest {
                 .withEndDateTime(new SimpleDateFormat("dd/MM/yyyy").parse("17/06/2019"))
                 .build();
         when(appointmentMapper.constructResponse(any(Appointment.class))).thenReturn(new AppointmentDefaultResponse());
-        when(recurringPatternMapper.mapToResponse(any(AppointmentRecurringPattern.class))).thenReturn(recurringPattern);
+        when(recurringPatternMapper.mapToResponse(nullable(AppointmentRecurringPattern.class))).thenReturn(recurringPattern);
 
         List<RecurringAppointmentDefaultResponse> recurringAppointmentDefaultResponses =
                 recurringAppointmentMapper.constructResponse(Arrays.asList(appointmentOne));
 
-        assertEquals(new Integer(1), recurringAppointmentDefaultResponses.get(0).getRecurringPattern().getFrequency());
+        assertEquals(Integer.valueOf(1), recurringAppointmentDefaultResponses.get(0).getRecurringPattern().getFrequency());
         assertEquals(1, recurringAppointmentDefaultResponses.get(0).getRecurringPattern().getPeriod());
         assertEquals(RecurringAppointmentType.WEEK.name(), recurringAppointmentDefaultResponses.get(0).getRecurringPattern().getType());
         assertEquals(Arrays.asList("Monday", "Tuesday"),
                 recurringAppointmentDefaultResponses.get(0).getRecurringPattern().getDaysOfWeek());
         assertNull(recurringAppointmentDefaultResponses.get(0).getRecurringPattern().getEndDate());
         verify(appointmentMapper).constructResponse(any(Appointment.class));
-        verify(recurringPatternMapper).mapToResponse(any(AppointmentRecurringPattern.class));
+        verify(recurringPatternMapper).mapToResponse(nullable(AppointmentRecurringPattern.class));
     }
 }
